<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:gravity="center">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-light"
        android:text="@string/microsoft_teams"
        android:textColor="#6864ac"
        android:textSize="30sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="false"
        android:contentDescription="@string/image"
        android:cropToPadding="true"
        android:minWidth="220dp"
        android:minHeight="220dp"
        android:src="@mipmap/teams_round" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/get_started_with_your_work_school_or_npersonal_microsoft_account"
        android:textAlignment="center" />


    <EditText
        android:layout_width="300dp"
        android:layout_height="55dp"
        android:background="@drawable/edittextcorner"
        android:hint="@string/enter_email_phone_or_skype"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:textColorHint="@color/cardview_dark_background" />

    <android.widget.Button
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/button"
        android:backgroundTint="#6864ac"
        android:text="@string/sign_in"
        app:strokeColor="#6864ac"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="@string/get_help_signing_in"
        android:textColor="#6864ac" />

    <android.widget.Button

        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/buttondown"
        android:text="@string/join_a_meeting"
        android:textColor="#6864ac"
        app:strokeColor="#6864ac"
        app:strokeWidth="2dp" />

    <android.widget.Button
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/buttondown"
        android:drawableLeft="@mipmap/microsoft_small_foreground"
        android:text="@string/sign_up_for_free"
        android:textColor="#6864ac"
        app:strokeColor="#6864ac"
        app:strokeWidth="2dp" />


</LinearLayout>